--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "hnswlib-node": "^1.2.0",
-    "langchain": "0.0.5",
+    "langchain": "^0.0.6",
     "next": "13.1.6",
     "openai": "^3.1.0",
     "react": "18.2.0",
