--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "dotenv": "^16.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "hnswlib-node": "^1.2.0",
-    "langchain": "^0.0.6",
+    "langchain": "^0.0.7",
     "next": "13.1.6",
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.5",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "ws": "^8.12.1"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.5.4"
   }
 }
