fix: improve ingestion

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,5 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-data/
-ingest/ingested_data/
-ingest/langchain.readthedocs.io/
+ingested_data/
+langchain.readthedocs.io/
