--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.5"
+    "react-markdown": "^8.0.5",
+    "ws": "^8.12.1"
   },
   "devDependencies": {
     "@types/node": "18.13.0",
