Update to langchain-js 0.0.102. - Expand on https://github.com/sullivan-sean/chat-langchainjs/pull/18/files#diff-51e4f558fae534656963876761c95b83b6ef5da5103c4adef6768219ed76c2de. - Revert use of ChatOpenAI for question generator to avoid issue. - Update imports.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "hnswlib-node": "^1.4.2",
-    "langchain": "0.0.47",
+    "langchain": "^0.0.102",
     "next": "13.1.6",
     "openai": "^3.1.0",
     "react": "18.2.0",
